update index.html via function node1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,72 @@
-<html>
-  <body>
-    <h1>Hello from n8n Function Node!</h1>
-  </body>
+```html
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>농업 뉴스 요약</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 20px;
+            background-color: #f8f9fa;
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+        .news-item {
+            margin-bottom: 20px;
+            padding: 15px;
+            border: 1px solid #d1d1d1;
+            border-radius: 8px;
+            background-color: #ffffff;
+        }
+        .news-title {
+            font-size: 20px;
+            color: #007bff;
+            margin-bottom: 10px;
+        }
+        .news-content {
+            font-size: 16px;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>농업 주요 뉴스 요약 (2023년 10월 20일)</h1>
+
+    <div class="news-item">
+        <div class="news-title">1. 농산물 가격 상승</div>
+        <div class="news-content">
+            최근의 기후 변화와 자연재해로 인해 주요 농산물의 생산량이 감소하면서 가격이 상승하고 있습니다. 농민들은 이에 따른 수익 증가를 기대하고 있지만 소비자들은 가격 부담이 커지고 있습니다.
+        </div>
+    </div>
+
+    <div class="news-item">
+        <div class="news-title">2. 스마트 농업 도입</div>
+        <div class="news-content">
+            농업 기술의 발전으로 스마트 농업 도입이 확산되고 있습니다. 드론과 IoT 기술을 활용하여 농작물 관리와 생산성을 높이는 혁신적인 방법이 주목받고 있습니다.
+        </div>
+    </div>
+
+    <div class="news-item">
+        <div class="news-title">3. 농협의 역할 확대</div>
+        <div class="news-content">
+            농협은 농민과 소비자 간의 직거래를 촉진하고 있으며, 농산물 유통망 강화를 위해 다양한 정책을 추진하고 있습니다. 최근 농협의 직접 판매 증가로 인해 보다 신선한 농산물을 소비할 수 있는 기회가 늘고 있습니다.
+        </div>
+    </div>
+
+    <div class="news-item">
+        <div class="news-title">4. 농촌 활성화 사업</div>
+        <div class="news-content">
+            정부는 농촌 지역의 지속 가능한 발전을 위해 여러 활성화 프로그램을 시행하고 있습니다. 청년 농업인을 위한 지원 정책과 함께 농촌 관광 활성화 등의 노력이 진행 중입니다.
+        </div>
+    </div>
+
+</body>
 </html>
+```
