--- a/index.html
+++ b/index.html
@@ -1,72 +1,76 @@
+물론입니다! 농업, 농촌, 농협과 관련된 주요 이슈와 예상되는 트렌드에 대해 일반적인 정보를 드리겠습니다. 아래는 이런 내용을 담아 이메일 형식으로 작성해본 것입니다.
+
 ```html
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>농업 뉴스 요약</title>
+    <title>농업 및 농촌 동향</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
+            background-color: #f4f4f4;
+            margin: 0;
             padding: 20px;
-            background-color: #f8f9fa;
+        }
+        .container {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         h1 {
-            color: #333;
+            color: #333333;
+        }
+        h2 {
+            color: #555555;
+        }
+        p {
+            line-height: 1.6;
+            color: #666666;
+        }
+        .footer {
             text-align: center;
-        }
-        .news-item {
-            margin-bottom: 20px;
-            padding: 15px;
-            border: 1px solid #d1d1d1;
-            border-radius: 8px;
-            background-color: #ffffff;
-        }
-        .news-title {
-            font-size: 20px;
-            color: #007bff;
-            margin-bottom: 10px;
-        }
-        .news-content {
-            font-size: 16px;
-            color: #555;
+            padding-top: 20px;
+            color: #999999;
+            font-size: 0.8em;
         }
     </style>
 </head>
 <body>
+    <div class="container">
+        <h1>농업 및 농촌 동향</h1>
+        
+        <h2>1. 지속 가능한 농업</h2>
+        <p>
+            오늘날의 농업은 지속 가능한 방식으로 운영되는 것이 점점 중요해지고 있습니다. 
+            자원의 고갈과 기후 변화로 인해 환경을 고려한 농업 방식이 요구되고 있습니다. 
+            유기농, 생태농업 등의 접근 방식이 인기를 끌고 있으며, 
+            이로 인해 농민들의 수익성 개선에도 긍정적인 영향이 기대됩니다.
+        </p>
 
-    <h1>농업 주요 뉴스 요약 (2023년 10월 20일)</h1>
+        <h2>2. 스마트 농업</h2>
+        <p>
+            기술 발전과 데이터 분석의 활용은 농업 혁신의 핵심입니다. 
+            드론, IoT(사물인터넷), 인공지능 등을 통한 데이터 기반 농업 운영이 
+            농작물의 생산성을 높이고 자원의 효율적 사용을 가능하게 하고 있습니다. 
+            이러한 스마트 농업으로의 전환은 농촌 경제에도 새로운 활력을 불어넣고 있습니다.
+        </p>
 
-    <div class="news-item">
-        <div class="news-title">1. 농산물 가격 상승</div>
-        <div class="news-content">
-            최근의 기후 변화와 자연재해로 인해 주요 농산물의 생산량이 감소하면서 가격이 상승하고 있습니다. 농민들은 이에 따른 수익 증가를 기대하고 있지만 소비자들은 가격 부담이 커지고 있습니다.
+        <h2>3. 농촌 사회 변화</h2>
+        <p>
+            농촌 지역은 인구 감소와 고령화 문제에 직면하고 있습니다. 
+            젊은 인구 유입을 위한 다양한 정책과 함께 농촌 관광과 같은 사업이 부각되고 있으며, 
+            이를 통해 지역 경제 활성화를 도모하고 있습니다.
+        </p>
+
+        <div class="footer">
+            &copy; 2023 농업 정보 센터 | 모든 권리 보유
         </div>
     </div>
-
-    <div class="news-item">
-        <div class="news-title">2. 스마트 농업 도입</div>
-        <div class="news-content">
-            농업 기술의 발전으로 스마트 농업 도입이 확산되고 있습니다. 드론과 IoT 기술을 활용하여 농작물 관리와 생산성을 높이는 혁신적인 방법이 주목받고 있습니다.
-        </div>
-    </div>
-
-    <div class="news-item">
-        <div class="news-title">3. 농협의 역할 확대</div>
-        <div class="news-content">
-            농협은 농민과 소비자 간의 직거래를 촉진하고 있으며, 농산물 유통망 강화를 위해 다양한 정책을 추진하고 있습니다. 최근 농협의 직접 판매 증가로 인해 보다 신선한 농산물을 소비할 수 있는 기회가 늘고 있습니다.
-        </div>
-    </div>
-
-    <div class="news-item">
-        <div class="news-title">4. 농촌 활성화 사업</div>
-        <div class="news-content">
-            정부는 농촌 지역의 지속 가능한 발전을 위해 여러 활성화 프로그램을 시행하고 있습니다. 청년 농업인을 위한 지원 정책과 함께 농촌 관광 활성화 등의 노력이 진행 중입니다.
-        </div>
-    </div>
-
 </body>
 </html>
 ```
+
+위 코드에서는 농업 및 농촌에 관한 주요 이슈와 트렌드를 소개하는 간단한 이메일 레이아웃을 설계하였습니다. 필요한 정보나 구체적인 내용을 추가하고 싶으시면 말씀해 주세요!
